[package]
name = "iou-httpserver"
version = "0.1.0"
authors = ["Peter Malmgren <ptmalmgren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
pretty_env_logger = "0.4.0"
io-uring = "0.5"
libc = "*"
log = "0.4.14"
nix = "0.20"
thiserror = "1.0"