[package]
name = "iou-httpserver"
version = "0.1.0"
authors = ["Peter Malmgren <ptmalmgren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
futures = "0.3"
httparse = "1.4.1"
http = "0.2.4"
io-uring = "0.5"
libc = "*"
nix = "0.20"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"
