[package]
name = "iou-http"
version = "0.1.0"
authors = [
  "Peter Malmgren <ptmalmgren@gmail.com>",
  "Evan Schwartz <3262610+emschwartz@users.noreply.github.com>"
]
edition = "2018"

[dependencies]
futures = "0.3"
httparse = "1.4.1"
http = "0.2.4"
io-uring = "0.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"
